[gd_scene load_steps=19 format=3 uid="uid://bttb00eqlymmh"]

[ext_resource type="Theme" uid="uid://d1yyhlcnycp7a" path="res://scene/Resources/UITheme.tres" id="1_m4seq"]
[ext_resource type="PackedScene" uid="uid://bml21vqmaldgj" path="res://scene/MainGame/UI/AbilityIcon.tscn" id="2_1mejx"]
[ext_resource type="Texture2D" uid="uid://ih1yvdaxnj84" path="res://asset/abilities.png" id="2_ok5nh"]
[ext_resource type="Script" path="res://scene/MainGame/UI/IngameUI.gd" id="2_t5c34"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u0j6x"]
atlas = ExtResource("2_ok5nh")
region = Rect2(48, 16, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gqxwa"]
load_path = "res://.godot/imported/abilities.png-c3af5f18842159392fc49e695ce5b411.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_us0b6"]
atlas = SubResource("CompressedTexture2D_gqxwa")
region = Rect2(0, 16, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6ogmb"]
load_path = "res://.godot/imported/abilities.png-c3af5f18842159392fc49e695ce5b411.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_d3epo"]
atlas = SubResource("CompressedTexture2D_6ogmb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1k0ru"]
load_path = "res://.godot/imported/abilities.png-c3af5f18842159392fc49e695ce5b411.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gu65k"]
atlas = SubResource("CompressedTexture2D_1k0ru")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vubfg"]
load_path = "res://.godot/imported/abilities.png-c3af5f18842159392fc49e695ce5b411.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rbude"]
atlas = SubResource("CompressedTexture2D_vubfg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_211c3"]
load_path = "res://.godot/imported/abilities.png-c3af5f18842159392fc49e695ce5b411.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_4l2iy"]
atlas = SubResource("CompressedTexture2D_211c3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Animation" id="Animation_j86oo"]
resource_name = "HideDescription"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Description:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_it7vx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Description:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_opnvi"]
_data = {
"HideDescription": SubResource("Animation_j86oo"),
"RESET": SubResource("Animation_it7vx")
}

[node name="IngameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m4seq")
script = ExtResource("2_t5c34")

[node name="AbilityContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 16.0
theme = ExtResource("1_m4seq")
theme_override_constants/separation = 5

[node name="LifeIcon" type="TextureRect" parent="AbilityContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_u0j6x")

[node name="LifeLabel" type="Label" parent="AbilityContainer2/LifeIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 50.0
offset_bottom = 20.0
text = "x3"

[node name="CoinIcon" type="TextureRect" parent="AbilityContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_us0b6")

[node name="CoinLabel" type="Label" parent="AbilityContainer2/CoinIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 50.0
offset_bottom = 20.0
text = "x0"

[node name="AbilityContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 18.0
offset_right = 80.0
offset_bottom = 34.0
theme = ExtResource("1_m4seq")

[node name="Mote" parent="AbilityContainer" instance=ExtResource("2_1mejx")]
layout_mode = 2
texture = SubResource("AtlasTexture_d3epo")

[node name="Fireball" parent="AbilityContainer" instance=ExtResource("2_1mejx")]
layout_mode = 2
texture = SubResource("AtlasTexture_gu65k")
index = 1

[node name="IceSpikes" parent="AbilityContainer" instance=ExtResource("2_1mejx")]
layout_mode = 2
texture = SubResource("AtlasTexture_rbude")
index = 2

[node name="LightningBeam" parent="AbilityContainer" instance=ExtResource("2_1mejx")]
layout_mode = 2
texture = SubResource("AtlasTexture_4l2iy")
index = 3

[node name="Description" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 1.0
offset_top = 36.0
offset_right = 136.0
offset_bottom = 47.0
text = "Fireball: 1-3 damage. 1 coin cost."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_opnvi")
}
